hot fix footer cta alignment

--- a/src/templates/blog.scss
+++ b/src/templates/blog.scss
@@ -77,21 +77,18 @@
   }
 
   .post-footer-ctas-container {
-    width: 80%;
+    border:2px solid $primary-d;
+    width: 100%;
     margin: 3rem auto;
     padding: 1rem 0rem;
     border-radius: 0.4rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    @include media-down("md") {
-      flex-direction: column;
-      * {
-        margin-bottom: 1rem;
-      }
-    }
+    flex-direction: column;
     .title {
       color: $primary-d;
+      margin-bottom: 1.2rem;
     }
     .btn {
       margin-left: 1rem;
